# generic-recommender

./: CONTRIBUTING.md  Makefile  pyproject.toml
.github/workflows/: ci.yml
docs/en/: dataset_config.md
docs/fr/: dataset_config.md
src/recommender/core/: recommender.py
