[project]
name = "generic-recommender"
version = "1.0.0"
description = "Domain-agnostic recommendation engine for tabular datasets."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Andry Tsiresy A. Tomefy Ny Soa", email = "tomefyandrytsiresy@gmail.com" }]
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest",
  "ruff",
  "black",
]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]


[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

